# scratchGPT

./: .gitignore  README.md  TODO.MD  app.py  custom_tokenizer.json  data_processing.ipynb  data_processing.py  dataset.py  infer.py  model.py  pyproject.toml  questions.MD  train.py  train_finetune_instruct.py  train_large.py
artifacts/tokenizer/: tokenizer_training.txt
configs/: config.py
data/: cleaned_documents.jsonl  law_stack_exchange.jsonl
llm_lab/: train_qlora.py
logs/2025-05-02_10-40-12_iyeop/: executor.json
logs/2025-05-02_10-46-17_zubbc/: executor.json
logs/2025-05-02_10-47-22_dkpau/: executor.json
logs/2025-05-02_10-49-55_mpvis/: executor.json
logs/2025-05-02_10-56-33_giawa/: executor.json
logs/2025-05-02_10-58-12_wfuox/: executor.json
logs/2025-05-02_10-58-54_iujtt/: executor.json
logs/2025-05-02_11-03-23_icpci/: executor.json
logs/2025-05-02_11-05-41_jenbq/: executor.json
logs/2025-05-02_11-05-59_ijikw/: executor.json
logs/2025-05-02_11-09-53_tccdr/: executor.json
logs/2025-05-02_11-09-54_cahxs/: executor.json
logs/2025-05-02_11-11-56_macma/: executor.json
logs/2025-05-02_11-11-57_giifc/: executor.json
logs/2025-05-02_11-12-20_jixuy/: executor.json
logs/2025-05-02_11-12-21_onxsq/: executor.json
logs/2025-05-02_11-17-07_pbuze/: executor.json
logs/2025-05-02_11-19-53_sefyh/: executor.json
logs/2025-05-02_11-23-19_xdgot/: executor.json
notebooks/: data_processing.ipynb
scratchgpt/configs/: config.py
scripts/: app.py
src/: infer.py  model.py  tokenizer_training.txt  train.py  train_finetune_instruct.py
(+56 files in other folders)
